[metadata]
version = 0.2.4
name = rcounting
author = CutOnBumInBand
author_email = cutonbuminband@gmail.com
description = A collection of tools for working with comments made on www.reddit.com/r/counting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cutonbuminband/counting_stats
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[flake8]
max-line-length = 100
ignore = E129, W503
per-file-ignores =
    rcounting/__init__.py:F401
    rcounting/*/__init__.py:F401
    
[options]
packages = find:
install_requires =
    pandas
    praw
	psaw
	scipy
include_package_data = True

[options.entry_points]
console_scripts =
    log_thread = rcounting.scripts.log_thread:main
	validate = rcounting.scripts.validate:main
	update_thread_directory = rcounting.scripts.update_thread_directory:main
[options.extras_require]
analysis = matplotlib


[options.package_data]
* = *.txt, *.ini

